--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+		</dependency>
 
 
 		<dependency>
@@ -51,28 +55,28 @@
 
 
 
-		<dependency>
-			<groupId>com.amazonaws</groupId>
-			<artifactId>rrr</artifactId>
-			<version>1.11.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/libs/rrr.jar</systemPath>
-		</dependency>
-		<dependency>
-			<groupId>com</groupId>
-			<artifactId>core</artifactId>
-			<version>1.11.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/libs/core-1.0.0-SNAPSHOT.jar</systemPath>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.amazonaws</groupId>-->
+<!--			<artifactId>rrr</artifactId>-->
+<!--			<version>1.11.0</version>-->
+<!--			<scope>system</scope>-->
+<!--			<systemPath>${project.basedir}/libs/rrr.jar</systemPath>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com</groupId>-->
+<!--			<artifactId>core</artifactId>-->
+<!--			<version>1.11.0</version>-->
+<!--			<scope>system</scope>-->
+<!--			<systemPath>${project.basedir}/libs/core-1.0.0-SNAPSHOT.jar</systemPath>-->
+<!--		</dependency>-->
 
-		<dependency>
-			<groupId>com</groupId>
-			<artifactId>core1</artifactId>
-			<version>1.11.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/libs/groovy-all-2.4.11.jar</systemPath>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com</groupId>-->
+<!--			<artifactId>core1</artifactId>-->
+<!--			<version>1.11.0</version>-->
+<!--			<scope>system</scope>-->
+<!--			<systemPath>${project.basedir}/libs/groovy-all-2.4.11.jar</systemPath>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
