--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,32 +1,14 @@
+server:
+  port: 23334
+
 spring:
-  freemarker:
-    content-type: text/html
-    expose-request-attributes: true
-    expose-session-attributes: true
-    suffix: .ftl
-    template-loader-path: classpath:/templates/
+  profiles:
+    active: dev
 
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: bistro8888
-    url: jdbc:mysql://47.108.189.93:8014/test?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&zeroDateTimeBehavior=convertToNull&connectTimeout=2000
-    hikari:
-      connection-test-query: select 1
-      maximum-pool-size: 10
-      minimum-idle: 1
-      idle-timeout: 180000
-  redis:
-    password: bistro9999
-    host: 47.108.189.93
-    port: 8016
-    jedis:
-      pool:
-        max-active: 100
-        min-idle: 1
-    client-type: jedis
+logging:
+  file:
+    name: 'fakelogin.log'
+    path: './logs'
 
-
-auth:
-  appkey: e9d34b22cdcd11e78d73842b2b738d12
-  loginurl: http://localhost:23333/login/callback
+logback:
+  level: info
