--- a/pom.xml
+++ b/pom.xml
@@ -54,29 +54,42 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.29</version>
+		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>com.amazonaws</groupId>-->
-<!--			<artifactId>rrr</artifactId>-->
-<!--			<version>1.11.0</version>-->
-<!--			<scope>system</scope>-->
-<!--			<systemPath>${project.basedir}/libs/rrr.jar</systemPath>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>com</groupId>-->
-<!--			<artifactId>core</artifactId>-->
-<!--			<version>1.11.0</version>-->
-<!--			<scope>system</scope>-->
-<!--			<systemPath>${project.basedir}/libs/core-1.0.0-SNAPSHOT.jar</systemPath>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.10</version>
+		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>com</groupId>-->
-<!--			<artifactId>core1</artifactId>-->
-<!--			<version>1.11.0</version>-->
-<!--			<scope>system</scope>-->
-<!--			<systemPath>${project.basedir}/libs/groovy-all-2.4.11.jar</systemPath>-->
-<!--		</dependency>-->
+
+
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>rrr</artifactId>
+			<version>1.11.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/libs/rrr.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>com</groupId>
+			<artifactId>core</artifactId>
+			<version>1.11.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/libs/core-1.0.0-SNAPSHOT.jar</systemPath>
+		</dependency>
+
+		<dependency>
+			<groupId>com</groupId>
+			<artifactId>core1</artifactId>
+			<version>1.11.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/libs/groovy-all-2.4.11.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 	<build>
