--- a/script/docker-compose.yml
+++ b/script/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       spring.datasource.url: jdbc:mysql://rm-t4ni526qb82jyhs247o.mysql.singapore.rds.aliyuncs.com:3306/risk_decision_engine?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&autoReconnect=true
       spring.datasource.username: decision_engine
       spring.datasource.password: cdMSQZq2zeg9
+      jumei.auth.api.app.key: e9d34b22cdcd11e78d73842b2b738d12
     image: adoptopenjdk/openjdk8
     ports:
       - '8300:23333'
@@ -40,6 +41,7 @@ services:
       spring.datasource.hikari.pool-name: MysqlHikariCP
       spring.datasource.hikari.connection-test-query: SELECT 1
       spring.profiles.active: prod
+      auth.appkey: e9d34b22cdcd11e78d73842b2b738d12
     network_mode: bridge
     image: adoptopenjdk/openjdk8
     ports:
